bug do array.shift arrumado

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ html {
 }
 
 h1 {
-  margin-left: 70px;
   color: var(--color-light);
 }
 
@@ -27,6 +26,8 @@ h1 {
 #navegacao {
   position: fixed;
   z-index: 1;
+  left: 0;
+  right: 0;
 }
 
 nav {
@@ -37,6 +38,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  padding: 20px;
 }
 
 nav > div > a, nav > h1 > a {
@@ -195,13 +197,14 @@ footer {
   position: absolute;
   height: auto;
   width: 50vw;
-  bottom: 3vh;
+  bottom: 3.5vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #fff;
   color: #202020;
+  z-index: -1;
 }
 
 .sugestao {
